configure jvm memmory heap